src/test/deca/context/invalid/override_signature_incompatible.deca
// Description :
// Redéfinition d'une méthode avec paratter diff.

// Resultats :
// Echec

class Coach {
    int plan(int minute) { return minute; }
}

class CoachAdjoint extends Coach {
    int plan(float minute) { return 0; }
}

{ }
